# Fun-ASR-finetune

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-deepSpeed  Dockerfile-flash-attn  LICENSE  README.md  README_zh.md  auto_finetune.sh  auto_finuetune.sh  convert_to_lf.py  ctc.py  decode.py  decode_qwen3asr.py  demo1.py  demo2.py  demo3.py  demo3_paraformer.py  demo4.py  demo4_nano.py  demo5_qwen3asr.py  finetune.sh  finetune_nano.sh  finetune_paraformer.sh  finetune_qwen3asr.sh  finetune_stage.sh  main.py  model.py  monitor_log.py  pyproject.toml  requirements.txt  test.sh  train_log_analyzer.py
data/: readme.txt  train_example.jsonl  train_text.txt  train_wav.scp  val_example.jsonl  val_text.txt  val_wav.scp
deepspeed_conf/: ds_stage1.json
docs/: finetune.md  fintune_zh.md
outputs/2026-01-20/14-59-07/.hydra/: hydra.yaml
outputs/2026-01-20/15-08-27/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-20/15-09-33/.hydra/: hydra.yaml
tools/: cn_tn.py  datasets_utils.py  diagnosis_model_load.py  format5res.py  funasr_train_lora_fixed.py  lora_merge.py  lora_merge_qwen3asr.py  prepare_staged_data.py  qwen3_asr_sft.py  scp2jsonl.py  utils.py  whisper_mix_normalize.py
