[project]
name = "fun-asr"
version = "0.1.0"
description = "funasr-nano-finetune"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "compute-wer>=0.2.3",
    "funasr>=1.3.0",
    "matplotlib>=3.10.8",
    "openai-whisper>=20250625",
    "pyopenjtalk-plus>=0.4.1.post7",
    "pyqt6>=6.10.2",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "transformers>=4.51.3",
    "whisper-normalizer>=0.1.12",
    "zhconv>=1.4.3",
]


# 官方 PyPI 镜像（默认国内源可选）
[[tool.uv.index]]
name = "internal-proxy"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[[tool.uv.index]]
name = "huawei"
url = "https://mirrors.huaweicloud.com/repository/pypi/simple"
