[project]
name = "fun-asr"
version = "0.1.0"
description = "funasr-finetune"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "compute-wer>=0.2.3",
    "matplotlib>=3.10.8",
    "openai-whisper>=20250625",
    "pyopenjtalk-plus>=0.4.1.post7",
    "pyqt6>=6.10.2",
    "whisper-normalizer>=0.1.12",
    "zhconv>=1.4.3",
]

# 指定 extra 依赖
[project.optional-dependencies]
cpu = [
  "torch==2.8.0+cpu",
  "torchvision==0.23.0+cpu",
  "torchaudio==2.8.0+cpu",
]
cu128 = [
  "torch==2.8.0+cu128",
  "torchvision==0.23.0+cu128",
  "torchaudio==2.8.0+cu128",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]


# 指定源
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

# 官方 PyPI 镜像（默认国内源可选）
[[tool.uv.index]]
name = "internal-proxy"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[[tool.uv.index]]
name = "huawei"
url = "https://mirrors.huaweicloud.com/repository/pypi/simple"

# PyTorch 官方 CPU wheel
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cpu"
explicit = true

# PyTorch 官方 GPU wheel
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cu128"
explicit = true
